tests/substructural/check/drop_of_out_ref.err.expected
error: at 4:13: [SUB-DropOfNonDrop] In function 'f', block 'entry': cannot drop non-Drop type &out i64
   |
 4 |             drop r;
   |             ^^^^^^
  hint: only types implementing the Drop class can be explicitly dropped
error: at 4:13: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
   |
 4 |             drop r;
   |             ^^^^^^
  = note: reference declared here
   |
 2 |         fn f(r: &out i64) {
   |              ^^^^^^^^^^^
